[package]
name = "backpack-wiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features=["derive"]}
serde_json = "1"
tokio = {version = "1", features=["rt"]}
mediawiki = "0.2"
regex = "1"
parse_wiki_text="0.1"
json5 = "0.4"

clap = {version = "3", features=["derive"]}
version-compare = "0.1"
anyhow = "1"